# cuneipy

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
docs/source/: conf.py  index.rst  models.rst
oracc/epsd2/: __init__.py  download.py  schemas.py  utils.py
oracc/epsd2/models/: catalogue.py  corpus.py  glossary.py  index.py  metadata.py  portal.py  shared.py  sign_list.py  sortcodes.py  utils.py
pyoracc/: __init__.py  constants.py  oracc.py
pyoracc/corpus/: constants.py  enums.py
pyoracc/corpus/models/: cdl_data.py  corpus.py  text.py  text_data.py
pyoracc/epsd2/models/: catalogue.py  corpus.py  glossary.py  index.py  portal.py
pyoracc/models/: __init__.py  catalogue.py  corpus.py  glossary.py  index.py  metadata.py  portal.py  sign_list.py  sortcodes.py
sumeripy/: __init__.py
sumeripy/corpora/: __init__.py  main.py
sumeripy/corpora/corpus/: __init__.py  corpus_admin.py  corpus_base.py  corpus_literary.py  corpus_other.py  corpus_type.py  types.py
sumeripy/corpora/text/: __init__.py  cdl.py  enums.py  text_admin.py  text_base.py  text_literary.py  text_other.py  types.py
sumeripy/glossary/models/: metadata.py  sign_list.py  sortcodes.py
