[tool.poetry]
name = "sumeripy"
version = "0.1.0"
description = ""
authors = ["Cole Simmons <colesimmons223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pyright = "^1.1.351"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
